fixed layout issues on smaller devices for donations and other views

--- a/public/sass/partials/_modal.scss
+++ b/public/sass/partials/_modal.scss
@@ -1,11 +1,6 @@
 @include mobile {
   .modal-card {
     width: $modal-card-width-mobile;
-    .devider-l,
-    .devider-r {
-      border-right: none;
-      border-left: none;
-    }
   }
 }
 @include tablet {
